# compilers

./: .clang-format  .gitignore  Cargo.toml  README.md  make_dist.py  rustfmt.toml
.cargo/: config.toml
.github/workflows/: rust.yml
alan/: Cargo.toml
alan/benches/: bench_lexer.rs
alan/src/: ast.rs  codegen.rs  lexer.rs  lib.rs  parser.rs
alan/src/codegen/: compiler.rs  irresult.rs  irtype.rs  mod.rs  scope.rs  semantic.rs  symbol_table_entries.rs
alan/tests/: test_lexer.rs  test_parser.rs
alanc/: Cargo.toml  build.rs
alanc/src/: arg_parser.rs  error_printer.rs  main.rs
alanc/tests/: test_compiler.rs
alanc/tests/outputs/: answer17.result  cancer1.result  cancer2.input  cancer2.result  factorial.result  gcd.input  gcd.result  knapsack_recursive1.input  knapsack_recursive2.input  mergesort.input  mergesort.result
docs/: debian-instructions.md
examples/: answer.alan  array_recursive_fill.alan  bsort.alan  cancer.alan  factorial.alan  factors.alan  fibonacci.alan  fizzbuzz.alan  gcd.alan  hanoi.alan  hello.alan  knapsack.alan  knapsack_recursive.alan  mergesort.alan  mergesort_recursive.alan  nested_scopes_array.alan  nested_scopes_int.alan  powint.alan  test_global_merging.alan
examples/errors/: arg_number_mismatch.alan  arg_type_mismatch.alan  array_by_value.alan  assign_int_to_char.alan  assign_result_of_proc.alan  assign_to_pointer.alan  assign_to_str.alan  const_as_ref.alan  expr_type_mismatch.alan  main_has_args.alan  main_not_proc.alan  non_void_without_return.alan  params_with_same_name.alan  ptr_as_int.alan  redecleration.alan  redecleration_of_arg.alan  redefinition_of_function.alan  return_void_inside_int_fn.alan  subscript_on_non_array.alan  undeclared_func.alan  undeclared_id.alan  unused_func_result.alan  wrong_return_expr.alan
examples/warnings/: warnings_test.alan
src/: ast.rs  lexer.rs  lib.rs  parser.rs
stdlib/: .Cargo.toml  .build.rs  Cargo.toml  Makefile  README.md  build.rs  io.c  io.h  stdlib.alan  strings.c  strings.h  type_conversions.c  type_conversions.h
stdlib/src/: lib.rs
tests/: test_lexer.rs  test_parser.rs
