[package]
name = "alan"
version = "0.1.0"
edition = "2021"
authors = ["Stavros Avramidis <stavros9899@gmail.com>"]
description = "Alan programming language implementation"
license-file = "../LICENSE"
workspace = "../"


[dependencies]
stdlib = { path = "../stdlib" }
ariadne = { version = "0.4.0", features = ["auto-color"] }
chumsky = { version = "1.0.0-alpha.6", features = [
    "label",
    "extension",
    "nightly",
] }
internment = "0.7.4"
libc = "0.2.153"
likely_stable = "0.1.2"
logos = "0.14.0"
inkwell = { version = "0.5.0", features = ["llvm18-0"] }
llvm-sys = { package = "llvm-sys", version = "180", features = ["prefer-static"] }
