[package]
name = "alanc"
authors = ["Stavros Avramidis <stavros9899@gmail.com>"]
version = "0.1.0"
edition = "2021"
description = "Compiler of the Alan programming language, developed for the 8th semester's Compilers course at NTUA."
homepage = "https://github.com/purpl3F0x/compilers"

[dependencies]
alan = { path = "../alan" }
clap = { version = "4.5.9", features = ["derive", "string"] }
concolor = { version = "0.1.1", features = ["auto"] }
shadow-rs = "0.30.0"
yansi = "1.0.1"


[build-dependencies]
shadow-rs = "0.30.0"
