[package]
name = "alanc"
authors = ["Stavros Avramidis <stavros9899@gmail.com><el17811@mail.ntua.gr>"]
version = "0.1.0"
edition = "2021"
description = "Compiler of the Alan programming language, developed for the 8th semester's Compilers course at NTUA."
homepage = "https://github.com/purpl3F0x/compilers"

[dependencies]
alan = { path = "../alan" }
ariadne = { version = "0.4.1", features = ["auto-color"] }
clap = { version = "4.5.9", features = ["derive", "string"] }
shadow-rs = "0.30.0"
yansi = {version = "1.0.1", features = ["detect-env"]}


[build-dependencies]
shadow-rs = "0.30.0"

[dev-dependencies]
test-case = "*"
